@@ -303,7 +303,7 @@
       <module id="gok"/>
       <module id="gtkhtml" branch="gnome-2-16"/>
       <module id="gtksourceview" branch="gnome-2-16"/>
-      <module id="gucharmap"/>
+      <module id="gucharmap" branch="gnome-2-16"/>
       <module id="libgnomeprint" branch="gnome-2-12"/>
       <module id="libgnomeprintui" branch="gnome-2-12"/>
       <module id="libgtop"/>
